--- a/notes_app/pubspec.yaml
+++ b/notes_app/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
+  modal_progress_hud_nsn: ^0.4.0
+  
 dev_dependencies:
   build_runner: ^2.4.5
   flutter_lints: ^2.0.0
