--- a/bookly_app/pubspec.yaml
+++ b/bookly_app/pubspec.yaml
@@ -28,12 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  dio: ^5.2.1+1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
+  dio: ^5.2.1+1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.5.0
   go_router: ^9.0.0
   google_fonts: ^5.1.0
