--- a/movie_app/pubspec.yaml
+++ b/movie_app/pubspec.yaml
@@ -28,12 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.2.1+1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  flutter_getit: ^1.2.1
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
