--- a/movie_app/pubspec.yaml
+++ b/movie_app/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.2.3
+  carousel_slider: ^4.0.0
+  connectivity_plus: ^4.0.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   dio: ^5.2.1+1
@@ -37,7 +39,6 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_getit: ^1.2.1
-  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
